--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "eslint-config-next": "13.3.2",
     "next": "13.3.2",
     "react": "18.2.0",
-    "react-awesome-reveal": "^4.2.3",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "18.2.0",
+    "react-reveal": "^1.2.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
