--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
+    "google-map-react": "^2.2.1",
     "next": "13.3.2",
     "react": "18.2.0",
     "react-awesome-slider": "^4.1.0",
