--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.16.5",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "contentful": "^10.2.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
     "google-map-react": "^2.2.1",
