--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "codegen": "contentful-typescript-codegen --output @types/generated/contentful.d.ts"
   },
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^14.0.0",
-    "@contentful/rich-text-types": "^16.2.0",
+    "@contentful/rich-text-react-renderer": "^14.1.2",
+    "@contentful/rich-text-types": "^14.1.0",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
@@ -23,8 +23,10 @@
     "react": "18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "18.2.0",
+    "react-photo-album": "^2.2.2",
     "react-reveal": "^1.2.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "yet-another-react-lightbox": "^3.11.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
